# openwebui

./: .gitignore  .prettierrc  Pipfile  README.md  package.json  pyproject.toml  pyrightconfig.json  requirements.txt
.devcontainer/: devcontainer.json
.github/instructions/: chatgpt.instructions.md  code.instructions.md
.obsidian/: app.json  appearance.json  canvas.json  community-plugins.json  core-plugins.json  graph.json  types.json  vault-stats.json  workspace.json
.obsidian/plugins/obsidian-admonition/: data.json
configs/ollama/: config.reference.conf
configs/searxng/: default.limiter.toml  default.settings.yml
ollama/config/: config.json  config.reference.conf  config.windows.conf
ollama/docker/: .env  compose.yaml
ollama/windows/: OllamaCompleteConfiguration.ps1  OllamaStorageConfiguration.ps1  ollama.ps1
openwebui/compose/: safe.env
openwebui/config/: config.json
openwebui/docker/: docker-compose.yaml
openwebui/dockge/: .env
openwebui/original/: .env  docker-compose.yaml
scripts/: models.sh  ollama.ps1  searxng.sh
scripts/models/: deepseek-r1.sh  devstral.sh  gemma3.sh  llama3.1.sh  llama3.2.sh  llava.sh  mistral.sh  phi4.sh  qwen3.sh
searxng/: searxng.sh
searxng/settings/: settings.openwebui.sonnet.edited.yml  settings.stable.yml
services/apt-cacher-ng/: acng.conf  security.conf
services/apt.conf.d/: apt-cacher-ng.conf
services/docker/: compose.yaml
services/ollama/: models.sh
services/openwebui/: .env  opnwebui.sh
services/searxng/: searxng.sh
services/valkey/: sentinel.conf  valkey.conf
(+19 files in other folders)
